--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>OhMyFood</title>
 	</head>
 	<body>
-        <div class="loader">ohmyfood</div>
+        <!-- <div class="loader">ohmyfood</div> -->
         <header>
             <h1 class="logo-text">ohmyfood</h1>
         </header>
@@ -75,7 +75,7 @@
                                     <h3>La note enchantée</h3>
                                     <p>Charonne</p>
                                 </div>
-                                <div class="like"><i class="fa-solid fa-heart"></i></div>
+                                <div class="like"><i class="fa-solid fa-heart checked"></i></div>
                             </div>
                             <span class="new">Nouveau</span>
                         </a>
