--- a/restaurants/restaurant02.html
+++ b/restaurants/restaurant02.html
@@ -14,7 +14,7 @@
         </header>
         
         <main>
-            <img class="restaurant-bg" src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+            <div class="restaurant-bg"><img src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens"></div>
 
             <div class="container">
                 <div class="name">
