--- a/restaurants/restaurant04.html
+++ b/restaurants/restaurant04.html
@@ -14,7 +14,7 @@
         </header>
         
         <main>
-            <img class="restaurant-bg" src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="À la française">
+            <div class="restaurant-bg"></div><img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="À la française"></div>
 
             <div class="container">
                 <div class="name">
