--- a/restaurants/restaurant01.html
+++ b/restaurants/restaurant01.html
@@ -14,7 +14,7 @@
         </header>
         
         <main>
-            <img class="restaurant-bg" src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+            <div class="restaurant-bg"><img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"></div>
 
             <div class="container">
                 <div class="name">
