--- a/restaurants/restaurant03.html
+++ b/restaurants/restaurant03.html
@@ -14,7 +14,7 @@
         </header>
         
         <main>
-            <img class="restaurant-bg" src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+            <div class="restaurant-bg"><img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"></div>
 
             <div class="container">
                 <div class="name">
