fix: texte restaurants

--- a/restaurants/restaurant04.html
+++ b/restaurants/restaurant04.html
@@ -14,7 +14,7 @@
         </header>
         
         <main>
-            <div class="restaurant-bg"></div><img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="À la française"></div>
+            <div class="restaurant-bg"><img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française"></div>
 
             <div class="container">
                 <div class="name">
