--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>OhMyFood</title>
 	</head>
 	<body>
-        <!-- <div class="loader">ohmyfood</div> -->
+        <div class="loader">ohmyfood</div>
         <header>
             <h1 class="logo-text">ohmyfood</h1>
         </header>
